--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
             {% block title %}
             {% endblock title %}
         </title>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static '/css/blog.css' %}">
     </head>
 
     <body>
