absolute url in template

--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -9,7 +9,7 @@ My Blog
 
 {% for post in posts %}
 <h2>
-    <a href="{% url 'blog:post_detail' post.id %}">
+    <a href="{{ post.get_absolute_url }}">
         {{ post.title}}
     </a>
 </h2>
