--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -19,4 +19,6 @@ My Blog
 {{ post.body | truncatewords:30 | linebreaks}}
 {% endfor %}
 
+{% include 'pagination.html' with page=posts %}
+
 {% endblock content %}
