--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -19,6 +19,6 @@ My Blog
 {{ post.body | truncatewords:30 | linebreaks}}
 {% endfor %}
 
-{% include 'pagination.html' with page=posts %}
+{% include 'pagination.html' with page=page_obj %}
 
 {% endblock content %}
