--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -36,5 +36,6 @@
 {% empty %}
 <p> There are no more comments. </p>
 {% endfor %}
+{% include "blog/post/includes/comment_form.html" %}
 
 {% endblock content %}
