--- a/blog/templates/blog/post/includes/comment_form.html
+++ b/blog/templates/blog/post/includes/comment_form.html
@@ -1,5 +1,5 @@
 <h2>Add a new comment</h2>
-<form action="{% url 'blog:post_comment' post_id %}" method="post">
+<form action='{% url "blog:post_comment" post.id %}' method="post">
     {{ form.as_p}}
     {% csrf_token %}
     <p>
