--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -13,6 +13,7 @@ My Blog
         {{ post.title}}
     </a>
 </h2>
+<p class="tags">Tags: {{ post.tags.all| join:", "}} </p>
 <p class="date">
     Published {{ post.publish }} by {{ post.author }}
 </p>
