--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -17,7 +18,7 @@
         </div>
         <div id="sidebar">
             <h2>My Blog</h2>
-            <p>This is my blog.</p>
+            <p>This is my blog and I have written {% total_posts %} posts so far.</p>
         </div>
     </body>
 
