--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,6 +19,9 @@
         <div id="sidebar">
             <h2>My Blog</h2>
             <p>This is my blog and I have written {% total_posts %} posts so far.</p>
+            <a href="{% url 'blog:post_feed' %}">
+                Subscribe to my RSS feed
+            </a>
             <h3>Latest posts</h3>
             {% show_latest_posts 3 %}
             <h3>Most commented posts</h3>
