corrected css links

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -7,7 +7,7 @@
             {% block title %}
             {% endblock title %}
         </title>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}.css">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     </head>
 
     <body>
