--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -7,7 +7,7 @@ Log-in
 
 {% block content %}
 <h1>Log-in</h1>
-<p>Please, use the current form to log in</p>
+<p>Please, use the  form to log in. If you don't have an account you can register <a href="{% url 'register' %}">here</a></p>
 <form method="post">
     {{ form.as_p }}
     {% csrf_token %}
