--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -14,7 +14,7 @@ Log in
 </p>
 {% else %}
 <p>
-    Please, use the following form to log inIf you don't have an account you can register <a href="{% url 'register' %}">here</a>
+    Please, use the following form to log in. If you don't have an account you can register <a href="{% url 'register' %}">here</a>
 </p>
 {% endif %}
 <div class="login-form">
