edit and change links on the dashboard

--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -10,7 +10,13 @@ Dashboard
     Dashboard
 </h1>
 <p>
-    Welcome to your Dashboard
+    Welcome to your Dashboard.
+</p>
+<p>
+    You can <a href="{% url 'edit' %}">edit</a> your profile
+</p>
+<p>
+    You can <a href="{% url 'password_change' %}">change</a> your password too.
 </p>
 <p>
     Variable {{ section }}
