--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -45,6 +45,16 @@
             </span>
 
         </div>
+        {% if message %}
+        <ul class='messages'>
+            {% for message in messages %}
+            <li class="{{ message.tags }}">
+                {{ message|safe}}
+                <a href="#" class='close'>x</a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
         <div id="content">
             {% block content %}=
             {% endblock content %}
