messages as pop up notifications

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -45,7 +45,7 @@
             </span>
 
         </div>
-        {% if message %}
+        {% if messages %}
         <ul class='messages'>
             {% for message in messages %}
             <li class="{{ message.tags }}">
