social googlo login

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -31,4 +31,11 @@ Log in
     </p>
 </div>
 
+<div class="social">
+    <ul>
+        <li class="google">
+            <a href="{% url 'social:begin' 'google-oauth2' %}">Sign in with google</a>
+        </li>
+    </ul>
+</div>
 {% endblock content %}
