--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -9,8 +9,13 @@ Dashboard
 <h1>
     Dashboard
 </h1>
+{% with request.user.images_created.count as total_images_created %}
 <p>
-    Welcome to your Dashboard.
+    Welcome to your dashboard, You have bookmarked {{ total_images_created }} image {{total_images_created|pluralize}}.
+</p>
+{% endwith %}
+<p>
+    Drag the following button to your bookmarks toolbar to bookmark images from other websites -> <a href="javascript:{% url 'bookmarklet_launcher.js' %}" class='button'>Bookmark it</a>
 </p>
 <p>
     You can <a href="{% url 'edit' %}">edit</a> your profile
