--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -15,7 +15,7 @@ Dashboard
 </p>
 {% endwith %}
 <p>
-    Drag the following button to your bookmarks toolbar to bookmark images from other websites -> <a href="javascript:{% url 'bookmarklet_launcher.js' %}" class='button'>Bookmark it</a>
+    Drag the following button to your bookmarks toolbar to bookmark images from other websites -> <a href="javascript:{% include 'bookmarklet_launcher.js' %}" class='button'>Bookmark it</a>
 </p>
 <p>
     You can <a href="{% url 'edit' %}">edit</a> your profile
